--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3 class="text-secondary">ILUSTRADOR</h3>
         </div>
 
-        <form class="inicio m-auto mt-5" action="">
+        <form id="loginForm" class="inicio m-auto mt-5" action="">
             <div class="form-floating ">
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label>
