--- a/galeria.html
+++ b/galeria.html
@@ -4,14 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería</title>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Verificar si la cookie de autenticación está presente
+            var hasAuthentication = document.cookie.indexOf('authenticated=true') !== -1;
     
+            // Si no hay autenticación, redirigir a index.html
+            if (!hasAuthentication) {
+                window.location.href = 'index.html';
+            }
+        });
+    </script>
 </head>
 <body>
     <h1>Bienvenido a la Galería</h1>
    
-    <script>
-          // Función para leer las cookies
-          function getCookie(name) {
+    <!-- <script>
+          // Función para establecer una cookie con un tiempo de expiración
+          function setCookie(name, value, days) {
+            var expires = "";
+            if (days) {
+                var date = new Date();
+                date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                expires = "; expires=" + date.toUTCString();
+            }
+            document.cookie = name + "=" + value + expires + "; path=/";
+        }
+
+        // Función para leer las cookies
+        function getCookie(name) {
             var match = document.cookie.match(new RegExp('(^| )' + name + '=([^;]+)'));
             if (match) return match[2];
         }
@@ -23,6 +44,6 @@
             // Si no está autenticado, redirigir a index.html
             window.location.href = "index.html";
         }
-    </script>
+    </script> -->
 </body>
 </html>
