--- a/galeria.html
+++ b/galeria.html
@@ -17,7 +17,7 @@
     <main id="container-galery">
         <section id="perfil">
             <figure>
-                <img src="/img/avatar.svg" alt="" class="avatar">
+                <img src="./img/avatar.svg" alt="" class="avatar">
                 <figcaption> <b>Daniel Muñoz Abellan</b>
                     <p>ILUSTRADOR</p>
                 </figcaption>
@@ -42,7 +42,7 @@
         </section>
         <section id="abaut" style="display: none;">
             <div id="fotoAbout">
-                <img src="/img/avatar.svg" alt="">
+                <img src="./img/avatar.svg" alt="">
             </div>
             <div id="infoAbout">
                 <h1> about me </h1>
