--- a/html/galeria.html
+++ b/html/galeria.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../css/style.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src='galery.js' defer></script>
+    <script src='../js/galery.js' defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
@@ -17,7 +17,7 @@
     <main id="container-galery">
         <section id="perfil">
             <figure>
-                <img src="./img/avatar.svg" alt="" class="avatar">
+                <img src="../img/avatar.svg" alt="" class="avatar">
                 <figcaption> <b>Daniel Muñoz Abellan</b>
                     <p>ILUSTRADOR</p>
                 </figcaption>
@@ -42,7 +42,7 @@
         </section>
         <section id="abaut" style="display: none;">
             <div id="fotoAbout">
-                <img src="./img/avatar.svg" alt="">
+                <img src="../img/avatar.svg" alt="">
             </div>
             <div id="infoAbout">
                 <h1> about me </h1>
