--- a/html/galeria.html
+++ b/html/galeria.html
@@ -17,7 +17,7 @@
     <main id="container-galery">
         <section id="perfil">
             <figure>
-                <img src="../img/avatar.svg" alt="" class="avatar">
+                <img src="../img/avatar.png" alt="" class="avatar">
                 <figcaption> <b>Daniel Muñoz Abellan</b>
                     <p>ILUSTRADOR</p>
                 </figcaption>
@@ -40,9 +40,21 @@
         <section id="galeria">
             <!-- Aquí se agregan las imágenes de la galería -->
         </section>
+          <!-- Modal para mostrar el contenido adicional -->
+          
+<!-- Contenedor del modal -->
+        <div id="myModal" class="modal ">
+            <!-- <span><i class="fa fa-arrow-up text-light subir animate__animated animate__slideInUp" style="font-size: 30px;"></i></span> -->
+            <div class="modal-content animate__animated animate__slideInUp">
+            <img id="modalImage" src="" alt="Imagen en grande" class="imgC">
+            <!-- Agrega aquí el contenido adicional -->
+            <div id="additionalContent"></div>
+            </div>
+        </div>
+
         <section id="abaut" style="display: none;">
             <div id="fotoAbout">
-                <img src="../img/avatar.svg" alt="">
+                <img src="../img/avatar.png" alt="">
             </div>
             <div id="infoAbout">
                 <h1> about me </h1>
@@ -133,44 +145,8 @@
 
             </div>
         </section>
+
     </main>
-
-    <div class="modal fade" id="imagenModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <img src="" id="imagenModalSrc" class="img-fluid" alt="Imagen en popup">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="formularioCorreoModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Enviar Correo</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <!-- Aquí va tu formulario de correo -->
-                    <form>
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Correo Electrónico</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Mensaje</label>
-                            <textarea class="form-control" id="exampleInputPassword1" rows="4"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
