--- a/html/index.html
+++ b/html/index.html
@@ -19,8 +19,8 @@
 <body class="bg-dark ">
     <main class=" text-center content">
         <div class="text-bg-dark tlna">
-            <h1 class=" title">Daniel Muñoz</h1>
-            <h3 class="text-secondary">ILUSTRADOR</h3>
+            <h1 class=" title">Daniel Muñoz Abellan</h1>
+            <h3 class="text-secondary">Concept Artist & 2D Artist sorry</h3>
         </div>
 
         <form id="loginForm" class="inicio m-auto mt-5" action="">
