--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <link rel='stylesheet' type='text/css' media='screen' href='../css/style.css'>
-    <script src='../js/main.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/style.css'>
+    <script src='./js/main.js'></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    
 </head>
 
 <body class="bg-dark ">
@@ -28,7 +30,7 @@
                 <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label>
             </div>
-            <button class="btn btn-secondary mt-4">CONTINUAR <i></i></button>
+            <button class="btn btn-secondary mt-4">GO<i class=""></i></button>
         </form>
     </main>
 </body>
