--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class=" text-center content">
         <div class="text-bg-dark tlna">
             <h1 class=" title">Daniel Muñoz Abellan</h1>
-            <h3 class="text-secondary">Concept Artist & 2D Artist sorry</h3>
+            <h3 class="text-secondary">Concept Artist & 2D Artist</h3>
         </div>
 
         <form id="loginForm" class="inicio m-auto mt-5" action="">
