--- a/galeria.html
+++ b/galeria.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" crossorigin="anonymous" />
+
     <script src='./js/galery.js' defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
@@ -22,7 +24,8 @@
                     <p class="text-secondary" style="font-size: 18px;">Barcelona</p>
 
                     Concept Artist & 2D Artist<br>
-                    <b class="text-secondary "style="font-size: 15px;"><i class="fa fa-envelope"></i>danielmunozartist@gmail.com</b> </p>
+                    <b class="text-secondary " style="font-size: 15px;"><i
+                            class="fa fa-envelope"></i>danielmunozartist@gmail.com</b> </p>
                 </figcaption>
             </figure>
             <nav>
@@ -34,7 +37,6 @@
                 </li>
             </nav>
             <footer>
-                <i class="fa fa-envelope" onclick="mostrarFormularioCorreo()"></i>
                 <i class="fa fa-instagram"></i>
                 <i class="fa fa-linkedin"></i>
             </footer>
@@ -127,12 +129,22 @@
 
                     <h3 class="animate__animated animate__slideInUp"> <b> <i class="fa fa-code"></i>SOFTWARE</b></h3>
                     <article class="fade-in animate__animated animate__slideInUp">
-                        <p><b>Photoshop, Illutrator, Indesign, Premiere, After Effects, Blender, ZBrush, Procreate, Clip
-                                Studio Paint, Substance </b><br>
-
+                        <p>
+                            <b>
+                                <i class="fa fa-adobe"></i> Photoshop
+                                <i class="fa fa-adobe"></i> Illustrator
+                                <i class="fa fa-adobe"></i> Indesign
+                                <i class="fa fa-adobe"></i> Premiere
+                                <i class="fa fa-adobe"></i> After Effects
+                                <i class="fa fa-blender"></i> Blender
+                                <i class="fa fa-paint-brush"></i> ZBrush
+                                <i class="fa fa-artstation"></i> Procreate
+                                <i class="fa fa-paint-brush"></i> Clip Studio Paint
+                                <i class="fa fa-flask"></i> Substance
+                            </b><br>
                         </p>
-
                     </article>
+
 
                     <!-------------------------------- OUTSIDE THE SECTOR -------------------------------->
                     <h3 class="animate__animated animate__slideInUp"> <b> <i class="fa fa-plus"></i>OUTSIDE THE
